--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -13,10 +13,13 @@ div.logo {
 	margin-right: auto;
 }
 
-nav ul {
-	margin: 0;
-	padding: 0;
+nav {
 	width: 750px;
+}
+
+nav ul {
+	padding: 0;
+	margin: 0;
 	height: 31px;
 }
 
