--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
   <div class="logo">
-    <img src="/images/logo.jpg">
+    <img src="/images/logo.png">
   </div>
   <nav>
     <ul>
