--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   </div>
   <nav>
     <ul>
-      <li class="current">News</li>
-      <li>GRFs</li>
-      <li>Contact</li>
-      <li>About</li>
+      <li class="current"><a href="/">News</a></li>
+      <li><a href="#">GRFs</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">About</a></li>
     </ul>
   </nav>
 <%= yield %>
