--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -55,3 +55,59 @@ nav ul li a:hover {
 nav ul li.current a {
 	color: #cacaca;
 }
+
+/* MISC */
+h3 small {
+	font-size: 0.7em;
+	color: #505050;
+	float: right;
+	text-transform: none;
+	margin-top: 2px;
+}
+
+h3 {
+	margin-bottom: 0.5em;
+	padding: 5px;
+	font-size: 1.2em;
+	border-top: 2px solid #b2b2b2;
+	border-bottom: 1px dashed #b2b2b2;
+	text-transform: uppercase;
+/*
+	background: #b2b2b2;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+*/
+}
+
+p {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.content {
+	float: left;
+	width: 535px;
+}
+
+.rightbar {
+	float: right;
+	width: 200px;
+}
+
+/* DROPDOWN */
+div.ddm {
+	position: absolute;
+	visibility: hidden;
+	border: 2px solid #000;
+	border-top: 0px;
+	background: #222323;
+	width: 120px;
+	color: #6c6c6c;
+/*	-moz-box-shadow: 1px 1px 1px #000;
+	-webkit-box-shadow: 1px 1px 1px #000;
+	box-shadow: 1px 1px 1px #000;*/
+}
+
+.ddm ul li {
+	border-bottom: 2px solid #000;
+}
