--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <ul>
       <li class="current"><%= link_to 'News', root_path %></li>
       <li><a href="#" id="GRFs">GRFs</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">About</a></li>
+      <li><%= link_to 'Contact', contact_path %></li>
+      <li><%= link_to 'About', about_path %></li>
     </ul>
   </nav>
