GRF scaffold added

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
   <nav>
     <ul>
       <li class="current"><%= link_to 'News', root_path %></li>
-      <li><a href="#" id="GRFs">GRFs</a></li>
+      <li><%= link_to 'GRFs', grf_path %></li>
       <li><%= link_to 'Contact', contact_path %></li>
       <li><%= link_to 'About', about_path %></li>
     </ul>
